--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=AppDb
-spring.datasource.username=sa
-spring.datasource.password=MyDataPassword2019!
+spring.datasource.url=jdbc:sqlserver://192.168.110.252;databaseName=AppDb
+spring.datasource.username=appUser
+spring.datasource.password=Gratis_2023
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
