--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:sqlserver://192.168.110.252;databaseName=AppDb
 spring.datasource.username=appUser
-spring.datasource.password=Gratis_2023
+spring.datasource.password=Gratis_2024
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 dozer.mapping-files=classpath:mapping.xml
+server.port=8080
