Read metadata from database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 dozer.mapping-files=classpath:mapping.xml
 server.port=8080
+databaseType=MSSQL
